--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <div id= 'contenedor' class="contenedor">
             <div class="titulo">
-                <h1>¿Puede ser que usted sea homosexuaal?</h1>
+                <h1>¿Eres homosexual?</h1>
             </div>
             <div class="botones">
                 <button id="yes">SI</button>
