--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <div id= 'contenedor' class="contenedor">
             <div class="titulo">
-                <h1>¿Me das un beso?</h1>
+                <h1>¿Me das 5 mil dolares?</h1>
             </div>
             <div class="botones">
                 <button id="yes">SI</button>
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div id= 'mensaje'class="mensaje">
-            <p>Yendo bb ;)</p>
+            <p>Gracias, despues te paso mi CBU ;)</p>
         </div>
     </main>
     <!-- JavaScript -->
