--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
-    <title>Boton que escapa</title>
+    <title>Que onda</title>
 </head>
 <body>
     <main>
         <div id= 'contenedor' class="contenedor">
             <div class="titulo">
-                <h1>¿Me das 5 mil dolares?</h1>
+                <h1>¿Te llamas Valentina?</h1>
             </div>
             <div class="botones">
                 <button id="yes">SI</button>
                 <button id="no">NO</button>
             </div>
         </div>
-        <div id= 'mensaje'class="mensaje">
-            <p>Gracias, despues te paso mi CBU ;)</p>
+        <div id= 'mensaje-positivo'class="mensaje">
+            <p>Entonces toca de aca gil</p>
+        </div>
+        <div id= 'mensaje-negativo' class="mensaje">
+            <p>Felicidades por la recibida bombon ;)</p>
         </div>
     </main>
     <!-- JavaScript -->
