--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
             </div>
         </div>
         <div id= 'mensaje-positivo'class="mensaje">
-            <p>Felicidades por la recibida bombon ;)</p>
+            <p>Felicidades por la recibida bombon ;)
+                <button class="close">Cerrar</button>
+            </p>
         </div>
         <div id= 'mensaje-negativo' class="mensaje">
-            <p>Entonces toca de aca gil</p>
+            <p>Entonces toca de aca gil
+             <button class="close">Cerrar</button></p>
         </div>
     </main>
     <!-- JavaScript -->
