--- a/index.html
+++ b/index.html
@@ -5,28 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
-    <title>Que onda</title>
+    <title>Agus Casal</title>
 </head>
 <body>
     <main>
-        <div id= 'contenedor' class="contenedor">
-            <div class="titulo">
-                <h1>¿Te llamas Valentina?</h1>
-            </div>
-            <div class="botones">
-                <button id="yes">SI</button>
-                <button id="no">NO</button>
-            </div>
-        </div>
-        <div id= 'mensaje-positivo'class="mensaje">
-            <p>Felicidades por la recibida bombon ;)
-                <button class="close">Cerrar</button>
-            </p>
-        </div>
-        <div id= 'mensaje-negativo' class="mensaje">
-            <p>Entonces toca de aca gil
-             <button class="close">Cerrar</button></p>
-        </div>
+       <img src="./casal.png"> </img>
     </main>
     <!-- JavaScript -->
     <script src="java.js"></script>
