--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
-    <title>Agus Casal</title>
+    <title>Hola</title>
 </head>
 <body>
     <main>
+        <div id= 'contenedor' class="contenedor">
+            <div class="titulo">
+                <h1>Me das un besito?</h1>
+            </div>
+            <div class="botones">
+                <button id="yes">SI</button>
+                <button id="no">NO</button>
+            </div>
+        </div>
+        <div id= 'mensaje'class="mensaje">
+            <p>Te espero</p>
+        </div>
     </main>
     <!-- JavaScript -->
     <script src="java.js"></script>
